--- a/pastprojects.html
+++ b/pastprojects.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=rjOobO"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=rjOobO" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Ghnmhz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Ghnmhz" type="text/css">
 
   
   
@@ -58,7 +58,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link dropdown-toggle text-black display-4" href="https://sgevent.com.sg/services" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Our Services</a><div class="dropdown-menu" aria-labelledby="dropdown-297"><a class="dropdown-item text-black text-primary display-4" href="eventmanagement.html">Event Management</a><a class="show dropdown-item text-black text-primary display-4" href="roadshowvenue.html">Roadshow Venue</a><a class="show dropdown-item text-black text-primary display-4" href="warehouse.html">Warehousing Solutions</a><a class="show dropdown-item text-black text-primary display-4" href="equipmentrental.html">Equipment Rental</a><a class="show dropdown-item text-black text-primary display-4" href="corporategifts.html">Corporate Gifts</a></div>
+						<a class="nav-link link dropdown-toggle text-black display-4" href="https://sgevent.com.sg/services" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Our Services</a><div class="dropdown-menu" aria-labelledby="dropdown-297"><a class="dropdown-item text-black text-primary display-4" href="eventmanagement.html">Event Management</a><a class="show dropdown-item text-black text-primary display-4" href="roadshowvenue.html">Roadshow Venue</a><a class="show dropdown-item text-black text-primary display-4" href="logistics.html">Event Logistics</a><a class="show dropdown-item text-black text-primary display-4" href="equipmentrental.html">Equipment Rental</a><a class="show dropdown-item text-black text-primary display-4" href="corporategifts.html">Corporate Gifts</a></div>
 					</li><li class="nav-item"><a class="nav-link link show text-black text-primary display-4" href="pastprojects.html">Past Projects</a></li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="index.html#contacts02-1q">Contact</a>
@@ -214,7 +214,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Best AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
