--- a/eventmanagement.html
+++ b/eventmanagement.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ixubLY"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ixubLY" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=d4TAtU"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=d4TAtU" type="text/css">
 
   
   
@@ -168,7 +168,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/gate.io1.jpeg-816x612.jpg" alt="Gate.io" title="" data-slide-to="0" data-bs-slide-to="0">
+              <a href="gateio.html"><img src="assets/images/gate.io1.jpeg-816x612.jpg" alt="Gate.io" title="" data-slide-to="0" data-bs-slide-to="0"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -181,7 +181,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/geniebook-1600x1420.jpg" alt="Geniebook" title="" data-slide-to="1" data-bs-slide-to="1">
+              <a href="geniebook.html"><img src="assets/images/geniebook-1600x1420.jpg" alt="Geniebook" title="" data-slide-to="1" data-bs-slide-to="1"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -194,7 +194,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/whatsapp-image-2025-03-04-at-23.52.56-e1841eb5.jpg-838x629.jpg" alt="Globibo" title="" data-slide-to="2" data-bs-slide-to="2">
+              <a href="globibo.html"><img src="assets/images/whatsapp-image-2025-03-04-at-23.52.56-e1841eb5.jpg-838x629.jpg" alt="Globibo" title="" data-slide-to="2" data-bs-slide-to="2"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -207,7 +207,7 @@
         </div><div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/whatsapp-image-2025-03-04-at-23.37.06-17dc2d20.jpg-838x629.jpg" alt="HSBC" title="" data-slide-to="3" data-bs-slide-to="4">
+              <a href="hsbc.html"><img src="assets/images/whatsapp-image-2025-03-04-at-23.37.06-17dc2d20.jpg-838x629.jpg" alt="HSBC" title="" data-slide-to="3" data-bs-slide-to="4"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -220,7 +220,7 @@
         </div><div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/img-20250317-wa0026.jpg-816x612.jpeg" alt="Sasa" title="" data-slide-to="4" data-bs-slide-to="4">
+              <a href="sasa.html"><img src="assets/images/img-20250317-wa0026.jpg-816x612.jpeg" alt="Sasa" title="" data-slide-to="4" data-bs-slide-to="4"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -234,7 +234,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/avsw2.jpeg-838x620.jpg" alt="A Very Special Walk" title="" data-slide-to="5" data-bs-slide-to="5">
+              <a href="avsw.html"><img src="assets/images/avsw2.jpeg-838x620.jpg" alt="A Very Special Walk" title="" data-slide-to="5" data-bs-slide-to="5"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7"><strong>A Very Special Walk</strong></h5>
@@ -244,7 +244,7 @@
         </div><div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/standcon4.jpeg-838x629.jpg" alt="Standcon" title="" data-slide-to="6" data-bs-slide-to="7">
+              <a href="standcon.html"><img src="assets/images/standcon4.jpeg-838x629.jpg" alt="Standcon" title="" data-slide-to="6" data-bs-slide-to="7"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7">
@@ -256,7 +256,7 @@
         </div><div class="item features-image col-12 col-md-6 col-lg-4">
           <div class="item-wrapper">
             <div class="item-img">
-              <img src="assets/images/cheergoat-1228x1600.jpg" alt="Cheerful Goat Coffee" title="" data-slide-to="7" data-bs-slide-to="8">
+              <a href="cheerfulgoatcoffee.html"><img src="assets/images/cheergoat-1228x1600.jpg" alt="Cheerful Goat Coffee" title="" data-slide-to="7" data-bs-slide-to="8"></a>
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-3 mb-3 display-7"><strong>Cheerful Goat Coffee</strong></h5>
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
