--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vScPNg"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vScPNg" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=scewXt"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=scewXt" type="text/css">
 
   
   
@@ -111,11 +111,7 @@
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Transforming Visions throughout your journey</strong></h1>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Behind every successful event lies countless hours of planning, coordination, and execution. At SG Event, we've mastered the art of making the complex appear effortless. Our integrated approach combines creative design, technical expertise, and flawless logistics to deliver experiences that captivate audiences and exceed expectations.
-<br>
-<br>With our team handling every detail—from venue transformation to technical production—you're free to focus on what matters most: connecting with your guests and achieving your objectives. Our proprietary event management system ensures nothing falls through the cracks, while our dedicated project managers provide single-point accountability throughout your journey.
-<br>
-<br>Our Comprehensive Event Ecosystem:
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Our Comprehensive Event Ecosystem:
 <br>
 <br><strong>Strategic Event Design</strong> – Crafting experiences aligned with your brand and objectives
 <br>
@@ -623,7 +619,7 @@
        </h10>				
     </div>
   </div>  
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
